Parses the complaint section and dumps it to the log [TODO] Load the url and re-search within [TODO] Display results with popup.html

--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
   },
   "content_scripts": [{
     "matches": ["*://*.google.com/*"],
-    "js": ["content.js"]
+    "js": ["jquery.min.js","content.js"]
   }],
   "browser_action": {
     "default_title": "Test Extension"
